--- a/templates/test.html
+++ b/templates/test.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <h1>Hola!</h1>
-        <p>The big fools!</p>
+        <p>The big fools! 2</p>
     </body>
 </html>
